bpo-46217: Revert use of Windows constant that is newer than what we support